# infrahub-demo-service-catalog

./: .gitignore  .infrahub.yml  .yamllint.yml  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.override.yml  docker-compose.yml  landing-page.html  menu.yml  pyproject.toml  repository.yaml  skills-lock.json  tasks.py
.agents/skills/infrahub-common/rules/: connectivity-python-environment.md  connectivity-server-check.md
.agents/skills/infrahub-repo-auditor/: audit-procedure.md  examples.md
.claude/: skills
.github/workflows/: ci.yml  sync-docs.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
.vale/styles/: spelling-exceptions.txt
.vale/styles/Infrahub/: branded-terms-case-swap.yml
ansible/: ansible.cfg  deploy.yml
ansible/inventory/: infrahub_inv.yml
bootstrap/: permissions.yml  repository.yaml
data/: 02_groups_tags.yml
dev/commands/: README.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
dev/guidelines/: documentation.md
dev/guides/: getting-started.md
dev/knowledges/: architecture.md
dev/skills/: infrahub-analyst  infrahub-check-creator  infrahub-generator-creator  infrahub-menu-creator  infrahub-object-creator  infrahub-repo-auditor  infrahub-schema-creator  infrahub-transform-creator
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/docs/getting-started/: developer-walkthrough.mdx  installation.mdx  user-walkthrough.mdx
generators/: dedicated_internet.gql  implement_dedicated_internet.py  protocols.py
schemas/: data.py
schemas/base/: dcim.yml  ipam.yml  location.yml
schemas/circuit/: README.md  circuit.yml
schemas/location_minimal/: location_minimal.yml
schemas/service/: service.yml
schemas/vlan/: vlan.yml
semaphore/: Dockerfile
service_catalog/: infrahub.py  protocols_sync.py
service_catalog/pages/: 1_🔌_Dedicated_Internet.py
specs/001-semaphore-ansible-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-semaphore-ansible-simulation/checklists/: requirements.md
specs/001-semaphore-ansible-simulation/contracts/: semaphore-seed-api.md
specs/002-l2-l3-interface-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-l2-l3-interface-mode/checklists/: requirements.md
templates/: device_config.j2  device_info.gql
tests/: conftest.py
tests/integration/: test_create_service.py
tests/unit/: test_generator.py  test_infrahub_utils.py  test_portal.py
