[project]
name = "infrahub-demo-service-catalog"
version = "0.1.1"
description = "Service Catalog demo built with Infrahub and Streamlit for requesting and managing network services"
authors = [{name = "OpsMill", email = "info@opsmill.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "infrahub-sdk[all]>=1.17.0,<2.0.0",
    "streamlit>=1.51.0,<2.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "fast-depends>=3.0.3,<4.0.0",
    "invoke>=2.2.1,<3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-httpx>=0.30.0,<0.35",
    "pytest-clarity>=1.0.1",
    "ruff>=0.14.4",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
    "yamllint>=1.37.1",
    "infrahub-testcontainers>=1.6.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-vs"

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    ".venv",
    "env",
    "_build",
    "build",
    "dist",
    "examples",
]


[tool.ruff.lint]
preview = true

task-tags = ["FIXME", "TODO"]

select = ["ALL"]

ignore = [
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "CPY",    # flake8-copyright
    "T201",   # use of `print`
    "ISC",    # flake8-implicit-str-concat
    "COM812", # missing-trailing-comma
    "N999",   # Invalid module name
    "TD",
    "FIX",    # TODO
    "TRY",
    "B008",   # Do not perform function call `Depends` in argument defaults
    "EM102",  # Exception must not use an f-string literal
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "G004",   # Logging statement uses f-string
    "S311",   # Standard pseudo-random generators are not suitable
    "LOG004", # `.exception()` call outside exception handlers
    "FBT",    # Boolean-typed positional argument in function definition
]


#https://docs.astral.sh/ruff/formatter/black/
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["infrahub_sdk", "infrahub_ctl"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.mccabe]
# Target max-complexity=10
max-complexity = 17

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "S105",    # Possible hardcoded password assigned to variable
    "S106",    # Possible hardcoded password assigned to argument
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "PLR6301", # Method `XXXX` could be a function, class method, or static method
]

"schemas/data.py" = [
    "ARG001",    # Unused function argument
    "ANN201",  # Missing return type annotation for public function
    "B007",    # Loop control variable `node` not used within loop body
    "ANN001",  # Missing type annotation
]

"tasks.py" = [
    "PLC0415", # `import` should be at the top-level of a file
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["service_catalog*"]
